--- a/app/layout.css
+++ b/app/layout.css
@@ -3,6 +3,7 @@ html {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  color: #22293b;
 }
 
 .pageWrapper {
@@ -11,9 +12,16 @@ html {
   background: linear-gradient(252deg, #e3fffe 24%, #e6edfd 78%);
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+body {
+  width: 100%;
+  max-width: 1160px;
 }
 
 .pageWrapper::before {
+  z-index: -1;
   content: "";
   position: absolute;
   top: 0;
