--- a/app/_components/homePageMain/index.css
+++ b/app/_components/homePageMain/index.css
@@ -1,9 +1,25 @@
 .main {
-  margin: 60px 14px 0;
+  margin: 70px 14px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 24px;
+}
+
+.main-B__timer {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  background-color: #252525;
+  color: #ffcc8f;
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: uppercase;
+  width: 100%;
+  border-radius: 10px;
+  padding: 10px 0;
+  margin-bottom: 46px;
 }
 
 .main__plans {
@@ -20,6 +36,10 @@
 }
 
 @media (max-width: 426px) {
+  .main {
+    margin: 50px 14px 0;
+  }
+
   .main__plans {
     flex-direction: column-reverse;
     align-items: center;
@@ -29,5 +49,11 @@
     min-width: unset;
     width: 100%;
     font-weight: 16px;
+  }
+}
+
+@media (min-width: 427px) {
+  .main-B__timer {
+    display: none;
   }
 }
