--- a/app/_components/homePageFooter/index.css
+++ b/app/_components/homePageFooter/index.css
@@ -1,6 +1,6 @@
 .footer {
   font-size: 12px;
-  color: #747e97;
+  color: var(--font-pale);
   margin: 24px 14px 0;
   display: flex;
   flex-direction: column;
