--- a/components/checkBox/index.css
+++ b/components/checkBox/index.css
@@ -20,12 +20,12 @@
   height: 22px;
   border-radius: 50%;
   border: 2px solid rgba(34, 41, 59, 0.7);
-  background-color: #fff;
+  background-color: var(--white-main);
   cursor: pointer;
 }
 
 .checkBox__visual--checked {
-  background-color: #00b39b;
-  border-color: #00b39b;
-  color: #fff;
+  background-color: var(--green-main);
+  border-color: var(--green-main);
+  color: var(--white-main);
 }
